z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,7 @@ html {
 	bottom: 0;
 	left: 50%;
 	transform: translateY(calc(100% - 7px)) translateX(-50%);
+	z-index: 2;
 	display: flex;
 	flex-wrap: wrap;
 	width: max-content;
